[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fases/Botoes base/BotoesBaseScr.gd" type="Script" id=1]
[ext_resource path="res://Fases/Botoes base/EstiloBotoes.tres" type="Theme" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.980645, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="GradientTexture" id=3]

[sub_resource type="Animation" id=6]
resource_name = "AjudaConfirmada"
tracks/0/type = "value"
tracks/0/path = NodePath("OpcoesDeAjuda:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 512 ), Vector2( -72, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MensagemDeAjuda:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -240, 512 ), Vector2( 144, 512 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "AjudaNegada"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OpcoesDeAjuda:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 512 ), Vector2( -64, 512 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ConfirmarAjuda"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OpcoesDeAjuda:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 512 ), Vector2( 144, 512 ) ]
}

[node name="Botoes base" type="Node2D"]
script = ExtResource( 1 )
Resposta = "35"
VaiPra = "res://GoodEndingScreen.tscn"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 552, 317.875 )
scale = Vector2( 0.585938, 692.25 )
z_index = -100
texture = SubResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 896.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 576.0
theme = ExtResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 512.0
margin_top = 512.0
margin_right = 832.0
margin_bottom = 577.0
rect_rotation = 360.0
theme = ExtResource( 2 )
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 100, 100, 100, 0 )
margin_left = 512.0
margin_top = 488.0
margin_right = 599.0
margin_bottom = 502.0
text = "Caralho, sério"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OpcoesDeAjuda" type="Control" parent="."]
margin_left = -64.0
margin_top = 512.0
margin_right = -24.0
margin_bottom = 552.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmarAjuda" type="Label" parent="OpcoesDeAjuda"]
margin_right = 184.0
margin_bottom = 14.0
text = "Tem certeza que quer ajuda?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSim" type="Button" parent="OpcoesDeAjuda"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 60.0
text = "Sim"

[node name="BotaoNao" type="Button" parent="OpcoesDeAjuda"]
margin_left = 120.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 36, 0 )
text = "Não"

[node name="MensagemDeAjuda" type="Label" parent="."]
margin_left = -240.0
margin_top = 512.0
margin_right = 112.0
margin_bottom = 576.0
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
autowrap = true
clip_text = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -472, 336 )
scale = Vector2( 0.53125, 656 )
texture = SubResource( 3 )

[node name="BotaoDeAjuda" type="Button" parent="."]
margin_left = 64.0
margin_top = 512.0
margin_right = 128.0
margin_bottom = 576.0
theme = ExtResource( 2 )
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AjudaConfirmada = SubResource( 6 )
anims/AjudaNegada = SubResource( 5 )
anims/ConfirmarAjuda = SubResource( 4 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="OpcoesDeAjuda/BotaoSim" to="." method="_on_BotaoSim_button_up"]
[connection signal="button_up" from="OpcoesDeAjuda/BotaoNao" to="." method="_on_BotaoNao_button_up"]
[connection signal="button_up" from="BotaoDeAjuda" to="." method="_on_BotaoDeAjuda_button_up"]
